--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,4 +5,16 @@ permalink: /teaching/
 author_profile: true
 ---
 
-Teaching information for the next term will come soon!
+Updated teaching information for the next term will come soon!
+
+**Kausalität in den Sozialwissenschaften**
+- Master level
+- Semester: Winter semester 2021/2022
+- Time and Date: 11:15 Wednesday
+- Location and Room: NSG S328
+
+**Seminar B: Institutionen und sozialer Wandel**
+- Bachelor level
+- Semester: Winter semester 2021/2022 
+- Time and Date: 9:15 Wednesday
+- Location and Room: NSG S324
