--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,14 +7,14 @@ author_profile: true
 
 Updated teaching information for the next term will come soon!
 
-**Kausalität in den Sozialwissenschaften**
+## Kausalität in den Sozialwissenschaften
 
 - Master level
 - Semester: Winter semester 2021/2022
 - Time and Date: 11:15 Wednesday
 - Location and Room: NSG S328
 
-**Seminar B: Institutionen und sozialer Wandel**
+## Seminar B: Institutionen und sozialer Wandel
 
 - Bachelor level
 - Semester: Winter semester 2021/2022 
