--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -9,14 +9,8 @@ Updated teaching information for the next term will come soon!
 
 ## Kausalität in den Sozialwissenschaften
 
-- Master level
-- Semester: Winter semester 2021/2022
-- Time and Date: 11:15 Wednesday
-- Location and Room: NSG S328
+Master level<br /> Semester: Winter semester 2021/2022<br /> Time and Date: 11:15 Wednesday<br /> Location and Room: NSG S328
 
 ## Seminar B: Institutionen und sozialer Wandel
 
-- Bachelor level
-- Semester: Winter semester 2021/2022 
-- Time and Date: 9:15 Wednesday
-- Location and Room: NSG S324
+Bachelor level<br /> Semester: Winter semester 2021/2022<br /> Time and Date: 9:15 Wednesday<br /> Location and Room: NSG S324
