--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,12 +5,14 @@ permalink: /teaching/
 author_profile: true
 ---
 
-Updated teaching information for the next term will come soon!
+### Updated teaching information for the next term will come soon!
 
-## Kausalität in den Sozialwissenschaften
-
+### Kausalität in den Sozialwissenschaften
+<Kausalität in den Sozialwissenschaften>
 Master level<br /> Semester: Winter semester 2021/2022<br /> Time and Date: 11:15 Wednesday<br /> Location and Room: NSG S328
+</Kausalität in den Sozialwissenschaften>
 
-## Seminar B: Institutionen und sozialer Wandel
-
+###Seminar B: Institutionen und sozialer Wandel
+<Seminar B: Institutionen und sozialer Wandel>
 Bachelor level<br /> Semester: Winter semester 2021/2022<br /> Time and Date: 9:15 Wednesday<br /> Location and Room: NSG S324
+  <Seminar B: Institutionen und sozialer Wandel>
